Updates logo to look better on mobile devices. Fixes #28

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -361,6 +361,10 @@ aside {
   float: left;
 }
 
+.brand img {
+  max-width: 200px;
+}
+
 .brand-login
 {
   margin: 5px 0;
